# fictionaria

./: .gitignore  Cargo.toml  meson.build
data/: com.github.polyjitter.chatter.appdata.xml.in  com.github.polyjitter.chatter.desktop  com.github.polyjitter.fictionaria.appdata.xml.in  com.github.polyjitter.fictionaria.desktop.in
debian/: changelog  control  copyright
po/: POTFILES  com.github.polyjitter.fictionaria.pot  de.po  es.po
src/: Application  Application.vala
src/objects/: game.rs
src/ui/details/: mod.rs
src/ui/entries/: author.rs  game.rs  grouping.rs  mod.rs  tag.rs
