[package]
name = "fictionaria"
version = "0.1.0"
authors = ["adriene <polyjitter@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relm = "^0.19.0"
relm-derive = "^0.19.0"

[dependencies.gtk]
version = "^0.8.1"
default-features = false
features = ["v3_22"]

[dependencies.gio]
version = "^0.8.1"
features = ["v2_44"]